<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_menu_map"
        android:enabled="true"
        android:icon="@drawable/ic_menu_map"
        android:title="@string/menu_title_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_menu_devices"
        android:enabled="true"
        android:icon="@drawable/ic_menu_devices"
        android:title="@string/menu_title_devices"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_menu_geo"
        android:enabled="true"
        android:icon="@drawable/ic_menu_geo"
        android:title="@string/menu_title_geozones"
        app:showAsAction="ifRoom" />
</menu>