<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/statistic_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/ripple_effect">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16"
            android:src="@drawable/ic_statistic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16"
            android:text="@string/statistic"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/font_medium_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notifications_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/ripple_effect">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16"
            android:src="@drawable/ic_notif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16"
            android:text="@string/notifications"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/font_medium_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/ripple_effect">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16"
            android:src="@drawable/ic_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16"
            android:text="@string/settings"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/font_medium_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/help_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/ripple_effect">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16"
            android:src="@drawable/ic_help" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16"
            android:text="@string/help"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/font_medium_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/ripple_effect">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16"
            android:src="@drawable/ic_about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16"
            android:text="@string/about"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/font_medium_16" />
    </LinearLayout>



</LinearLayout>