<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/add_object_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/AppTheme.AppBarOverlay"
            app:title="@string/add_object"
            app:titleTextColor="@color/white" />

    </android.support.design.widget.AppBarLayout>


    <EditText
        android:id="@+id/object_name_et"
        style="@style/LoginEditTexts"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/et_text"
        android:hint="@string/object_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:background="@drawable/grey_background"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracker_type_et" />

    <EditText
        android:id="@+id/tracker_type_et"
        style="@style/LoginEditTexts"
        android:textColorHint="@color/et_text"
        android:layout_marginTop="16dp"
        android:drawableRight="@drawable/ic_expand_more_grey_24dp"
        android:background="@drawable/grey_background"
        android:hint="@string/tracker_type"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_avatar_iv" />

    <EditText
        android:id="@+id/sim_number_et"
        style="@style/LoginEditTexts"
        android:layout_marginTop="24dp"
        android:hint="@string/sim"
        android:inputType="number"
        android:background="@drawable/grey_background"
        android:textColorHint="@color/et_text"
        android:padding="12dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/object_name_et" />

    <EditText
        android:id="@+id/imei_number_et"
        style="@style/LoginEditTexts"
        android:layout_marginTop="24dp"
        android:hint="@string/imei"
        android:inputType="number"
        android:background="@drawable/grey_background"
        android:textColorHint="@color/et_text"
        android:padding="12dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sim_number_et" />

    <ImageView
        android:id="@+id/qr_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imei_number_et"
        app:layout_constraintTop_toTopOf="@+id/imei_number_et"
        app:srcCompat="@drawable/ic_qrcode" />

    <Button
        android:id="@+id/add_object_btn"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/custom_login_btn"
        android:text="добавить"
        android:textAllCaps="true"
        android:textColor="@color/light_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imei_number_et"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/add_avatar_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:srcCompat="@drawable/ic_avatar_set" />

</android.support.constraint.ConstraintLayout>